--- a/index.html
+++ b/index.html
@@ -24,20 +24,19 @@
       text-align: center;
     }
 
-  header a {
-    color: white;
-    text-decoration: none;
-    margin: 0 1rem;
-    font-size: 1rem;
-    font-weight: bold;
-    transition: color 0.3s ease;
-    font-family: 'Montserrat', sans-serif;
-  }
+    header a {
+      color: white;
+      text-decoration: none;
+      margin: 0 1rem;
+      font-size: 1rem;
+      font-weight: bold;
+      transition: color 0.3s ease;
+    }
 
-  header a:hover {
-    color: #F5B1B8;
-  }
-    
+    header a:hover {
+      color: #F5B1B8;
+    }
+
     main#inicio {
       position: relative;
       width: 100vw;
@@ -48,18 +47,18 @@
       padding-top: 4vh;
     }
 
-  .titulo-central {
-    font-family: "Cooper Black", serif;
-    font-size: clamp(2rem, 6vw, 6rem);
-    color: #BE1823;
-    text-align: center;
-    line-height: 0.75;
-    margin-bottom: 2rem;
-    margin-top: 2vh;
-    opacity: 0;
-    transform: translateY(20px);
-    animation: aparecer 1s ease-out forwards;
-  }
+    .titulo-central {
+      font-family: "Cooper Black", serif;
+      font-size: clamp(2rem, 6vw, 6rem);
+      color: #BE1823;
+      text-align: center;
+      line-height: 0.75;
+      margin-bottom: 2rem;
+      margin-top: 2vh;
+      opacity: 0;
+      transform: translateY(20px);
+      animation: aparecer 1s ease-out forwards;
+    }
 
     .gif-fondo {
       width: 100%;
@@ -97,7 +96,6 @@
       max-width: 800px;
       margin: 0 auto;
       text-align: center;
-      font-family: 'Montserrat', sans-serif;
       font-size: 1.2rem;
       line-height: 1.4;
       animation: aparecer 1s ease-out forwards;
@@ -135,11 +133,23 @@
     }
 
     .bloque-detalle p {
-      font-family: 'Montserrat', sans-serif;
       font-size: 1.2rem;
       line-height: 1.4;
       color: white;
       margin: 0;
+    }
+
+    section#salon {
+      background-color: #fff;
+      padding: 6vh 5vw;
+      text-align: center;
+    }
+
+    section#registro {
+      background-color: #BE1823;
+      padding: 6vh 5vw;
+      color: white;
+      text-align: center;
     }
 
     @keyframes aparecer {
@@ -200,7 +210,7 @@
         Nuestra historia no es una de cuentos. Lo nuestro siempre fue más lo de las palabras afiladas que lo del amor a primera vista.<br>
         Nos conocimos, nos desconocimos y aprendimos a volver a conocernos.<br>
         Discutimos, pensamos juntos, nos desafiamos, y en el medio de todo eso, nos elegimos.<br>
-        Decidimos casarnos, no por protocolo, si no porque queremos vivir juntos, donde sea.<br>
+        Decidimos casarnos, no por protocolo, sino porque queremos vivir juntos, donde sea.<br>
         Y porque si la vida ya es un delirio, mejor armar una fiesta.
       </p>
     </div>
@@ -211,21 +221,15 @@
     <div class="detalles-bloques">
       <div class="bloque-detalle">
         <h3>CUANDO?</h3>
-        <p>Sábado, 27 de Diciembre de 2025.<br>
-          Ceremonia a las 19.30 hs.</p>
+        <p>Sábado, 27 de Diciembre de 2025.<br>Ceremonia a las 19.30 hs.</p>
       </div>
       <div class="bloque-detalle">
         <h3>DÓNDE?</h3>
-        <p>Las Mercedes-Casa de Campo,
-          Unquillo, Córdoba.<br>
-        (Cuenta con su propio estacionamiento 
-        para más tranquilidad)</p>
+        <p>Las Mercedes – Casa de Campo,<br>Unquillo, Córdoba.<br>(Cuenta con su propio estacionamiento para más tranquilidad)</p>
       </div>
       <div class="bloque-detalle">
         <h3>DRESSCODE?</h3>
-        <p>Como estamos en una casona de campo 
-          recomendamos semiformal para asegurar la 
-          comodidad de los presentes.</p>
+        <p>Como estamos en una casona de campo recomendamos semiformal para asegurar la comodidad de los presentes.</p>
       </div>
       <div class="bloque-detalle">
         <h3>RSVP</h3>
@@ -235,30 +239,20 @@
   </section>
 
   <section id="salon">
-<section id="salon" style="background-color: #fff; padding: 6vh 5vw; text-align: center;">
-  <h2 style="font-family: 'Cooper Black', serif; font-size: clamp(2rem, 6vw, 4rem); color: #BE1823; margin-bottom: 2rem;">
-    El Salón
-  </h2>
-  <p style="max-width: 800px; margin: 0 auto; font-family: 'Montserrat', sans-serif; font-size: 1.2rem; line-height: 1.5; color: #111;">
-    Las Mercedes – Casa de Campo es el lugar que elegimos para celebrar. Rodeado de naturaleza, con espacios amplios y cálidos, es el escenario perfecto para compartir este momento con ustedes.
-  </p>
-  <div style="margin-top: 3rem;">
-    <iframe
-      src="https://www.google.com/maps?q=Las+Mercedes+470,+Unquillo,+Córdoba,+Argentina&output=embed"
-      width="100%"
-      height="400"
-      style="border:0;"
-      allowfullscreen=""
-      loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
-  </div>
-</section>  </section>
-
-  <section id="registro">
-    <!-- Contenido de Registro -->
-  </section>
-</body>
-</html>
-
-
+    <h2 style="font-family: 'Cooper Black', serif; font-size: clamp(2rem, 6vw, 4rem); color: #BE1823; margin-bottom: 2rem;">
+      El Salón
+    </h2>
+    <p style="max-width: 800px; margin: 0 auto; font-size: 1.2rem; line-height: 1.5; color: #111;">
+      Las Mercedes – Casa de Campo es el lugar que elegimos para celebrar. Rodeado de naturaleza, con espacios amplios y cálidos, es el escenario perfecto para compartir este momento con ustedes.
+    </p>
+    <div style="margin-top: 3rem;">
+      <iframe
+        src="https://www.google.com/maps?q=Las+Mercedes+470,+Unquillo,+Córdoba,+Argentina&output=embed"
+        width="100%"
+        height="400"
+        style="border:0;"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div
