--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Iara & Imanol</title>
-
-  <!-- Importar Montserrat -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
-
   <style>
     body {
       margin: 0;
@@ -17,13 +14,11 @@
       overflow-x: hidden;
       font-size: 18px;
     }
-
     header {
       background: #BE1823;
       padding: 0.8rem;
       text-align: center;
     }
-
     header a {
       color: white;
       text-decoration: none;
@@ -32,11 +27,9 @@
       font-weight: bold;
       transition: color 0.3s ease;
     }
-
     header a:hover {
       color: #F5B1B8;
     }
-
     main#inicio {
       position: relative;
       width: 100vw;
@@ -46,7 +39,6 @@
       align-items: center;
       padding-top: 4vh;
     }
-
     .titulo-central {
       font-family: "Cooper Black", serif;
       font-size: clamp(2rem, 6vw, 6rem);
@@ -59,7 +51,6 @@
       transform: translateY(20px);
       animation: aparecer 1s ease-out forwards;
     }
-
     .gif-fondo {
       width: 100%;
       max-height: 80vh;
@@ -70,53 +61,44 @@
       animation: aparecer 1s ease-out forwards;
       animation-delay: 0.3s;
     }
-
     .gif-fondo img {
       width: 100%;
       height: auto;
       object-fit: contain;
       opacity: 1;
     }
-
+    section {
+      padding: 6vh 5vw;
+      text-align: center;
+    }
     section#nosotros {
       background-color: #BE1823;
-      padding: 6vh 5vw;
       color: white;
     }
-
-    .nosotros-titulo {
-      font-family: "Cooper Black", serif;
-      font-size: clamp(2rem, 6vw, 4rem);
-      margin: 0 0 2rem 0;
-      text-align: center;
-      animation: aparecer 1s ease-out forwards;
-    }
-
-    .nosotros-contenido {
-      max-width: 800px;
-      margin: 0 auto;
-      text-align: center;
-      font-size: 1.2rem;
-      line-height: 1.4;
-      animation: aparecer 1s ease-out forwards;
-      animation-delay: 0.4s;
-    }
-
     section#detalles {
       background-color: #F5B1B8;
-      padding: 6vh 5vw;
       color: white;
-      text-align: center;
     }
-
-    .detalles-titulo {
+    section#salon {
+      background-color: #fff;
+      color: #111;
+    }
+    section#registro {
+      background-color: #BE1823;
+      color: white;
+    }
+    h2 {
       font-family: "Cooper Black", serif;
       font-size: clamp(2rem, 6vw, 4rem);
-      color: #BE1823;
-      margin-bottom: 3rem;
-      animation: aparecer 1s ease-out forwards;
+      margin-bottom: 2rem;
     }
-
+    .nosotros-contenido,
+    .registro-contenido {
+      max-width: 800px;
+      margin: 0 auto;
+      font-size: 1.2rem;
+      line-height: 1.6;
+    }
     .detalles-bloques {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
@@ -124,60 +106,45 @@
       max-width: 1000px;
       margin: 0 auto;
     }
-
     .bloque-detalle h3 {
       font-family: "Cooper Black", serif;
       font-size: 1.5rem;
       color: #BE1823;
       margin-bottom: 1rem;
     }
-
     .bloque-detalle p {
       font-size: 1.2rem;
       line-height: 1.4;
-      color: white;
       margin: 0;
     }
-
-    section#salon {
-      background-color: #fff;
-      padding: 6vh 5vw;
-      text-align: center;
+    .registro-contenido img {
+      max-width: 200px;
+      width: 100%;
+      height: auto;
+      margin: 2rem 0;
     }
-
-    section#registro {
-      background-color: #BE1823;
-      padding: 6vh 5vw;
-      color: white;
-      text-align: center;
-    }
-
     @keyframes aparecer {
       to {
         opacity: 1;
         transform: translateY(0);
       }
     }
-
     @media (max-width: 768px) {
       .titulo-central {
         font-size: 2rem;
         margin-top: 1vh;
       }
-
       .gif-fondo img {
         height: auto;
       }
-
-      .nosotros-contenido {
+      .nosotros-contenido,
+      .registro-contenido {
         font-size: 1rem;
       }
-
       .detalles-bloques {
         grid-template-columns: 1fr;
         gap: 2rem;
       }
-
       .bloque-detalle p {
         font-size: 1rem;
       }
@@ -194,17 +161,14 @@
   </header>
 
   <main id="inicio">
-    <h1 class="titulo-central">
-      IARA &<br>
-      IMANOL
-    </h1>
+    <h1 class="titulo-central">IARA &<br>IMANOL</h1>
     <div class="gif-fondo">
       <img src="Comp 1.gif" alt="Animación de fondo" />
     </div>
   </main>
 
   <section id="nosotros">
-    <h2 class="nosotros-titulo">Nuestra historia</h2>
+    <h2>Nuestra historia</h2>
     <div class="nosotros-contenido">
       <p>
         Nuestra historia no es una de cuentos. Lo nuestro siempre fue más lo de las palabras afiladas que lo del amor a primera vista.<br>
@@ -217,7 +181,7 @@
   </section>
 
   <section id="detalles">
-    <h2 class="detalles-titulo">Detalles</h2>
+    <h2>Detalles</h2>
     <div class="detalles-bloques">
       <div class="bloque-detalle">
         <h3>CUANDO?</h3>
@@ -239,10 +203,8 @@
   </section>
 
   <section id="salon">
-    <h2 style="font-family: 'Cooper Black', serif; font-size: clamp(2rem, 6vw, 4rem); color: #BE1823; margin-bottom: 2rem;">
-      El Salón
-    </h2>
-    <p style="max-width: 800px; margin: 0 auto; font-size: 1.2rem; line-height: 1.5; color: #111;">
+    <h2>El Salón</h2>
+    <p style="max-width: 800px; margin: 0 auto;">
       Las Mercedes – Casa de Campo es el lugar que elegimos para celebrar. Rodeado de naturaleza, con espacios amplios y cálidos, es el escenario perfecto para compartir este momento con ustedes.
     </p>
     <div style="margin-top: 3rem;">
@@ -255,4 +217,14 @@
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade">
       </iframe>
-    </div
+    </div>
+  </section>
+  <section id="registro">
+    <h2>Registro</h2>
+    <p style="font-size: 1.2rem; line-height: 1.6;">
+      Hace <span id="contador"></span> que más de 12.952 km nos separan.
+    </p>
+    <div class="registro-contenido">
+      <p>Por eso, para nosotros esto no es simplemente un casamiento: es la posibilidad y la apuesta a un futuro juntos.</p>
+      <p>No necesitamos regalos materiales; lo único que queremos es poder volver a vivir en el mismo lugar. La tarjeta es la forma que encontramos de hacer posible esta fiesta y de ayudarnos a transformar ese deseo en realidad.</p>
+      <p><strong>Mayores (por persona):</strong>
