--- a/index.html
+++ b/index.html
@@ -244,6 +244,26 @@
 
       <p style="margin-top: 2rem;">Gracias por acompañarnos, por hacer este día posible y por acercarnos un poco más a nuestro sueño.</p>
     </div>
+<form action="https://script.google.com/macros/s/AKfycbzo4EvlBChGqdrq6oYayAFmzohWaBY5uiG2Txu-J59X7YdXAxIHnJmbjAmvYeTPByyJ/exec" method="post" style="margin-top: 3rem;">
+  <label for="nombre">Nombre completo:</label><br>
+  <input type="text" id="nombre" name="nombre" required style="width: 100%; padding: 0.5rem; margin-bottom: 1rem;"><br>
+
+  <label for="dni">DNI:</label><br>
+  <input type="text" id="dni" name="dni" required style="width: 100%; padding: 0.5rem; margin-bottom: 1rem;"><br>
+
+  <label for="dieta">Dieta:</label><br>
+  <select id="dieta" name="dieta" required style="width: 100%; padding: 0.5rem; margin-bottom: 1rem;">
+    <option value="">Seleccionar</option>
+    <option value="Común">Común</option>
+    <option value="Vegetarianx">Vegetarianx</option>
+    <option value="Veganx">Veganx</option>
+    <option value="Celiacx">Celiacx</option>
+  </select><br>
+
+  <button type="submit" style="background-color: white; color: #BE1823; font-weight: bold; padding: 0.6rem 1.2rem; border: none; cursor: pointer;">
+    Enviar
+  </button>
+</form>
   </section>
 
   <!-- Script para contador dinámico -->
@@ -266,4 +286,5 @@
 
 </body>
 </html>
+
 
