--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
       <p style="margin-top: 2rem;">Gracias por acompañarnos, por hacer este día posible y por acercarnos un poco más a nuestro sueño.</p>
     </div>
-<form action="https://script.google.com/macros/s/AKfycbzo4EvlBChGqdrq6oYayAFmzohWaBY5uiG2Txu-J59X7YdXAxIHnJmbjAmvYeTPByyJ/exec" method="post" style="margin-top: 3rem;">
+<form id="registro-form" action="https://script.google.com/macros/s/AKfycbzo4EvlBChGqdrq6oYayAFmzohWaBY5uiG2Txu-J59X7YdXAxIHnJmbjAmvYeTPByyJ/exec" method="post" style="margin-top: 3rem;" onsubmit="mostrarConfirmacion(event)">
   <label for="nombre">Nombre completo:</label><br>
   <input type="text" id="nombre" name="nombre" required style="width: 100%; padding: 0.5rem; margin-bottom: 1rem;"><br>
 
@@ -264,7 +264,11 @@
     Enviar
   </button>
 </form>
-  </section>
+
+<!-- Contenedor de confirmación visual -->
+<div id="confirmacion" style="display: none; background-color: white; padding: 4vh 0;">
+  <img src="Comp 1.gif" alt="Confirmación visual" style="max-width: 400px; width: 100%; height: auto; margin: 0 auto; display: block;" />
+</div>
 
   <!-- Script para contador dinámico -->
   <script>
@@ -286,5 +290,6 @@
 
 </body>
 </html>
+
 
 
