--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     section#salon {
       background-color: #fff;
-      color: #111;
+      color: BE1823;
     }
 
     section#registro {
@@ -342,3 +342,4 @@
   </script>
 </body>
 </html>
+
