--- a/index.html
+++ b/index.html
@@ -366,4 +366,28 @@
   });
 </script>
 </body>
+<!-- Footer -->
+<footer style="background-color: #F5B1B8; color: white; text-align: center; padding: 6vh 5vw;">
+  <h2 style="font-family: 'Cooper Black', serif; font-size: clamp(1.5rem, 5vw, 2.5rem); margin-bottom: 1rem;">
+    Dudas?
+  </h2>
+  <p style="font-size: 1rem; margin-bottom: 1.5rem;">
+    Si te quedaste con alguna duda o necesitás ayuda para completar los datos del registro, ¡escribinos!
+  </p>
+  <p style="font-size: 1rem; margin-bottom: 0.5rem;">
+    <strong>Iara:</strong>
+    <a href="https://api.whatsapp.com/send/?phone=543516074183&text&type=phone_number&app_absent=0" target="_blank" style="color: white; text-decoration: underline;">
+      Abrir chat
+    </a>
+  </p>
+  <p style="font-size: 1rem;">
+    <strong>Imanol:</strong>
+    <a href="https://api.whatsapp.com/send/?phone=543516074183&text&type=phone_number&app_absent=0" target="_blank" style="color: white; text-decoration: underline;">
+      Abrir chat
+    </a>
+  </p>
+</footer>
+
+<!-- Cierre del documento -->
+</body>
 </html>
