--- a/index.html
+++ b/index.html
@@ -377,13 +377,13 @@
   <p style="font-size: 1rem; margin-bottom: 0.5rem;">
     <strong>Iara:</strong>
     <a href="https://api.whatsapp.com/send/?phone=543516074183&text&type=phone_number&app_absent=0" target="_blank" style="color: white; text-decoration: underline;">
-      Abrir chat
+      Whatsapp!
     </a>
   </p>
   <p style="font-size: 1rem;">
     <strong>Imanol:</strong>
     <a href="https://api.whatsapp.com/send/?phone=543516074183&text&type=phone_number&app_absent=0" target="_blank" style="color: white; text-decoration: underline;">
-      Abrir chat
+      Whatsapp!
     </a>
   </p>
 </footer>
@@ -391,3 +391,4 @@
 <!-- Cierre del documento -->
 </body>
 </html>
+
