--- a/index.html
+++ b/index.html
@@ -126,6 +126,38 @@
       color: white;
     }
 
+    .salon-contenido {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 2rem;
+    }
+
+    .salon-texto {
+      flex: 1;
+      text-align: left;
+    }
+
+    .salon-mapa {
+      flex: 1;
+    }
+
+    .salon-mapa iframe {
+      width: 100%;
+      height: 400px;
+      border-radius: 8px;
+    }
+
+    /* Vista móvil: que se pongan en columna */
+    @media (max-width: 768px) {
+      .salon-contenido {
+        flex-direction: column;
+      }
+      .salon-texto {
+        text-align: center;
+      }
+    }
+    
     .nosotros-contenido,
     .registro-contenido {
       font-size: clamp(1rem, 2.5vw, 1.2rem);
@@ -139,6 +171,10 @@
       gap: 2rem;
     }
 
+    #nosotros .contenido {
+      max-width: 1400px;
+    }
+    
     @media (max-width: 768px) {
       .detalles-bloques {
         grid-template-columns: 1fr;
@@ -274,24 +310,28 @@
   </section>
 
   <section id="salon">
-    <div class="contenido">
-           <h2>El Salón</h2>
+  <div class="contenido salon-contenido">
+    <div class="salon-texto">
+      <h2>El Salón</h2>
       <p>
-        Las Mercedes – Casa de Campo es el lugar que elegimos para celebrar. Rodeado de naturaleza, con espacios amplios y cálidos, es el escenario perfecto para compartir este momento con ustedes.
+        Las Mercedes – Casa de Campo es el lugar que elegimos para celebrar. 
+        Rodeado de naturaleza, con espacios amplios y cálidos, es el escenario perfecto 
+        para compartir este momento con ustedes.
       </p>
-      <div style="margin-top: 3rem;">
-        <iframe
-          src="https://www.google.com/maps?q=Las+Mercedes+470,+Unquillo,+Córdoba,+Argentina&output=embed"
-          width="100%"
-          height="400"
-          style="border:0;"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
-      </div>
     </div>
-  </section>
+    <div class="salon-mapa">
+      <iframe
+        src="https://www.google.com/maps?q=Las+Mercedes+470,+Unquillo,+Córdoba,+Argentina&output=embed"
+        width="100%"
+        height="400"
+        style="border:0;"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
+  </div>
+</section>
 
   <section id="registro">
     <div class="contenido">
