--- a/index.html
+++ b/index.html
@@ -102,7 +102,11 @@
       background-color: #BE1823;
       color: white;
     }
-
+    
+    #nosotros h2 {
+      color: #F5B1B8;
+    }
+    
     section#detalles {
       background-color: #F5B1B8;
       color: white;
@@ -279,7 +283,9 @@
           Nos conocimos, nos desconocimos y aprendimos a volver a conocernos.<br>
           Discutimos, pensamos juntos, nos desafiamos, y en el medio de todo eso, nos elegimos.<br>
           Decidimos casarnos, no por protocolo, sino porque queremos vivir juntos, donde sea.<br>
-          Y porque si la vida ya es un delirio, mejor armar una fiesta.
+          Y porque si la vida ya es un delirio, mejor armar una fiesta.<br>
+          <br>
+          ¿Y qué mejor que hacerlo con las personas que queremos?
         </p>
       </div>
     </div>
@@ -295,7 +301,7 @@
         </div>
         <div class="bloque-detalle">
           <h3>DÓNDE?</h3>
-          <p>Las Mercedes – Casa de Campo,<br>Unquillo, Córdoba.<br>(Cuenta con su propio estacionamiento para más tranquilidad)</p>
+          <p>Las Mercedes – Casa de Campo,<br>Unquillo, Córdoba.<br>Cuenta con su propio estacionamiento para más tranquilidad.</p>
         </div>
         <div class="bloque-detalle">
           <h3>DRESSCODE?</h3>
@@ -448,5 +454,6 @@
   </script>
 </body>
 </html>
+
 
 
