--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
       color: #BE1823;
     }
 
+    
     section#registro {
       background-color: #BE1823;
       color: white;
@@ -132,23 +133,25 @@
 
     .salon-contenido {
       display: flex;
-      align-items: center;
+      align-items: flex-start;   /* Alinea arriba */
       justify-content: space-between;
-      gap: 2rem;
+      gap: 3rem;                 /* Más espacio entre texto y mapa */
+      max-width: 1400px;         /* Ensancha el contenedor */
+      margin: 0 auto;
     }
 
     .salon-texto {
-      flex: 1;
+      flex: 0 0 40%;             /* 40% del ancho */
       text-align: left;
     }
 
     .salon-mapa {
-      flex: 1;
+      flex: 0 0 60%;             /* 60% del ancho */
     }
 
     .salon-mapa iframe {
       width: 100%;
-      height: 400px;
+      height: 450px;
       border-radius: 8px;
     }
 
@@ -161,7 +164,16 @@
         text-align: center;
       }
     }
-    
+
+    #salon h2 {
+      margin-bottom: 2rem;
+    }
+
+    #salon p {
+      text-align: justify;
+      line-height: 1.6;
+    }
+
     .nosotros-contenido,
     .registro-contenido {
       font-size: clamp(1rem, 2.5vw, 1.2rem);
@@ -454,6 +466,7 @@
   </script>
 </body>
 </html>
+
 
 
 
