--- a/index.html
+++ b/index.html
@@ -131,18 +131,18 @@
       display: flex;
       align-items: flex-start;   /* Alinea arriba */
       justify-content: space-between;
-      gap: 3rem;                 /* Más espacio entre texto y mapa */
-      max-width: 1400px;         /* Ensancha el contenedor */
+      gap: 5rem;                 /* Más espacio entre texto y mapa */
+      max-width: 1200px;         /* Ensancha el contenedor */
       margin: 0 auto;
     }
 
     .salon-texto {
-      flex: 0 0 40%;             /* 40% del ancho */
-      text-align: left;
+      flex: 0 0 30%;             /* 40% del ancho */
+      text-align: justify;
     }
 
     .salon-mapa {
-      flex: 0 0 60%;             /* 60% del ancho */
+      flex: 0 0 50%;             /* 60% del ancho */
     }
 
     .salon-mapa iframe {
@@ -462,6 +462,7 @@
   </script>
 </body>
 </html>
+
 
 
 
