--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
       display: flex;
       align-items: flex-start;   /* Alinea arriba */
       justify-content: space-between;
-      gap: 4rem;                 /* Más espacio entre texto y mapa */
-      max-width: 1200px;         /* Ensancha el contenedor */
+      gap: 3rem;                 /* Más espacio entre texto y mapa */
+      max-width: 1000px;         /* Ensancha el contenedor */
       margin: 0 auto;
     }
 
@@ -312,7 +312,7 @@
           <p>Las Mercedes – Casa de Campo,<br>Unquillo, Córdoba.<br>Cuenta con su propio estacionamiento para más tranquilidad.</p>
         </div>
         <div class="bloque-detalle">
-          <h3>DRESSCODE?</h3>
+          <h3>DRESSCODE</h3>
           <p>Como estamos en una casona de campo recomendamos semiformal para asegurar la comodidad de los presentes.</p>
         </div>
         <div class="bloque-detalle">
@@ -462,6 +462,7 @@
   </script>
 </body>
 </html>
+
 
 
 
