--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
   
   <!-- Imagen intermedia -->
   <div class="imagen-intermedia">
-    <img src="Sin título-1.png" alt="Imagen separadora">
+    <img src="fotofilm.png" alt="Imagen separadora">
   </div>
 
   <!-- SECCIÓN DETALLES -->
@@ -492,3 +492,4 @@
   </script>
 </body>
 </html>
+
