--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     .contenido {
       max-width: 1000px;
       margin: 0 auto;
-      padding: 6vh 5vw;
+      padding: 5vh 5vw;
       text-align: center;
     }
 
@@ -308,11 +308,11 @@
       <h2>Nuestra historia</h2>
       <div class="nosotros-contenido">
         <p>
-          Nuestra historia no es una de cuentos. Lo nuestro siempre fue más lo de las palabras afiladas que lo del amor a primera vista.<br>
+          Nuestra historia no es una de cuentos. Lo nuestro siempre fue más de las palabras afiladas que lo del amor a primera vista.<br>
           Nos conocimos, nos desconocimos y aprendimos a volver a conocernos.<br>
           Discutimos, pensamos juntos, nos desafiamos, y en el medio de todo eso, nos elegimos.<br>
           Decidimos casarnos, no por protocolo, sino porque queremos vivir juntos, donde sea.<br>
-          Y porque si la vida ya es un delirio, mejor armar una fiesta.<br><br>
+          Y porque si la vida ya es un delirio, mejor armar una fiesta.<br>
           ¿Y qué mejor que hacerlo con las personas que queremos?
         </p>
       </div>
@@ -492,6 +492,7 @@
   </script>
 </body>
 </html>
+
 
 
 
