--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       font-family: 'Montserrat', sans-serif;
       background-color: #F8F9FC;
       color: #111;
-      font-size: 20px;
+      font-size: 18px;
       overflow-x: hidden;
     }
 
@@ -102,6 +102,7 @@
       font-family: 'Cooper Black', serif;
       font-size: clamp(2rem, 6vw, 4rem);
       margin-bottom: 2rem;
+      margin-top: 0;
     }
 
     /* SECCIÓN NOSOTROS */
@@ -149,14 +150,14 @@
 
     .bloque-detalle h3 {
       font-family: 'Cooper Black', serif;
-      font-size: 1.5rem;
+      font-size: clamp(2rem, 3vw, 2.5rem);
       color: #BE1823;
       margin-bottom: 1rem;
     }
 
     .bloque-detalle p {
-      font-size: 1rem;
-      line-height: 1.4;
+      font-size: clamp(1.5rem, 2vw, 1.3rem);
+      line-height: 1.6;
       margin: 0;
     }
 
@@ -492,6 +493,7 @@
   </script>
 </body>
 </html>
+
 
 
 
