--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       font-family: 'Cooper Black', serif;
       font-size: clamp(2rem, 6vw, 4rem);
       margin-bottom: 3rem;
-      margin-top: 0.5;
+      margin-top: 0.5rem;
     }
 
     /* SECCIÓN NOSOTROS */
@@ -122,54 +122,40 @@
     }
 
     .imagen-intermedia img {
-      width: 100%;        /* ocupa todo el ancho */
+      width: 100%;        
       height: auto;
-      max-height: 600px;  /* opcional, límite de alto */
-      object-fit: cover;  /* recorta si es necesario */
+      max-height: 600px;  
+      object-fit: cover;  
       display: block;
     }
 
-    /* SECCIÓN DETALLES */
-    section#detalles {
+    /* SECCIÓN INFORMACIÓN */
+    section#informacion {
       background-color: #F5B1B8;
       color: white;
     }
 
-    .detalles-bloques {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: auto auto;
-      gap: 2rem;
+    .subseccion {
+      margin-bottom: 4rem;
+      text-align: center;
     }
 
-    @media (max-width: 768px) {
-      .detalles-bloques {
-        grid-template-columns: 1fr;
-      }
-    }
-
-    .bloque-detalle h3 {
+    .subseccion h3 {
       font-family: 'Cooper Black', serif;
-      font-size: clamp(1.1rem, 3vw, 2.5rem);
+      font-size: clamp(1.5rem, 4vw, 2.5rem);
       color: #BE1823;
-      margin-bottom: 0rem;
+      margin-bottom: 1rem;
     }
 
-    .bloque-detalle p {
+    .subseccion p {
       font-size: clamp(1rem, 2vw, 1.3rem);
-      margin: 0;
+      line-height: 1.6;
+      text-align: justify;
+      margin: 0 auto;
+      max-width: 800px;
     }
 
-    /* SECCIÓN SALÓN */
-    section#salon {
-      background-color: #fff;
-      color: #111;
-    }
-
-    section#salon h2 {
-      color: #BE1823;
-    }
-
+    /* CONTENIDO SALÓN (para Dónde?) */
     .salon-contenido {
       display: flex;
       align-items: flex-start;
@@ -203,25 +189,7 @@
       }
     }
 
-    #salon h2 {
-      margin-bottom: 2rem;
-    }
-
-    #salon p {
-      text-align: justify;
-      line-height: 1.6;
-    }
-
-    /* SECCIÓN REGISTRO */
-    section#registro {
-      background-color: #BE1823;
-      color: white;
-    }
-
-    section#registro h2 {
-      color: white;
-    }
-
+    /* FORMULARIO */
     form input,
     form select {
       width: 100%;
@@ -289,9 +257,7 @@
   <header>
     <a href="#inicio">Inicio</a>
     <a href="#nosotros">Nosotros</a>
-    <a href="#detalles">Detalles</a>
-    <a href="#salon">El Salón</a>
-    <a href="#registro">Registro</a>
+    <a href="#cuando">Información</a>
   </header>
 
   <!-- INICIO -->
@@ -324,63 +290,46 @@
     <img src="fotofilm.png" alt="Imagen separadora">
   </div>
 
-  <!-- SECCIÓN DETALLES -->
-  <section id="detalles">
+  <!-- SECCIÓN INFORMACIÓN -->
+  <section id="informacion">
     <div class="contenido">
-      <h2>Detalles</h2>
-      <div class="detalles-bloques">
-        <div class="bloque-detalle">
-          <h3>CUANDO?</h3>
-          <p>Sábado, 27 de Diciembre de 2025.<br>Ceremonia a las 19.30 hs.</p>
-        </div>
-        <div class="bloque-detalle">
-          <h3>DÓNDE?</h3>
-          <p>Las Mercedes – Casa de Campo,<br>Unquillo, Córdoba.<br>Cuenta con su propio estacionamiento para más tranquilidad.</p>
-        </div>
-        <div class="bloque-detalle">
-          <h3>DRESSCODE</h3>
-          <p>Como estamos en una casona de campo recomendamos semiformal para asegurar la comodidad de los presentes.</p>
-        </div>
-        <div class="bloque-detalle">
-          <h3>RSVP</h3>
-          <p>Por favor, confirmar asistencia antes del 9 de Diciembre.</p>
-        </div>
-      </div>
-    </div>
-  </section>
 
-  <!-- SECCIÓN SALÓN -->
-  <section id="salon">
-    <div class="contenido salon-contenido">
-      <div class="salon-texto">
-        <h2>El Salón</h2>
-        <p>
-          Las Mercedes – Casa de Campo es el lugar que elegimos para celebrar. 
-          Rodeado de naturaleza, con espacios amplios y cálidos, es el escenario perfecto 
-          para compartir este momento con ustedes.
-        </p>
+      <!-- SUBSECCIÓN CUÁNDO -->
+      <div id="cuando" class="subseccion">
+        <h3>Cuándo?</h3>
+        <p>Sábado, 27 de Diciembre de 2025.<br>Ceremonia a las 19.30 hs.</p>
       </div>
-      <div class="salon-mapa">
-        <iframe
-          src="https://www.google.com/maps?q=Las+Mercedes+470,+Unquillo,+Córdoba,+Argentina&output=embed"
-          width="100%"
-          height="400"
-          style="border:0;"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
-      </div>
-    </div>
-  </section>
 
-  <!-- SECCIÓN REGISTRO -->
-  <section id="registro">
-    <div class="contenido">
-      <h2>Registro</h2>
-      <p>Hace <span id="contador"></span> que más de 12.952 km nos separan.</p>
-      <div class="registro-contenido">
-        <p>Por eso, para nosotros esto no es simplemente un casamiento: es la posibilidad y la apuesta a un futuro juntos.</p>
+      <!-- SUBSECCIÓN DÓNDE -->
+      <div id="donde" class="subseccion">
+        <h3>Dónde?</h3>
+        <div class="salon-contenido">
+          <div class="salon-texto">
+            <p>
+              Las Mercedes – Casa de Campo es el lugar que elegimos para celebrar. 
+              Rodeado de naturaleza, con espacios amplios y cálidos, es el escenario perfecto 
+              para compartir este momento con ustedes.
+            </p>
+          </div>
+          <div class="salon-mapa">
+            <iframe
+              src="https://www.google.com/maps?q=Las+Mercedes+470,+Unquillo,+Córdoba,+Argentina&output=embed"
+              width="100%"
+              height="400"
+              style="border:0;"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+          </div>
+        </div>
+      </div>
+
+      <!-- SUBSECCIÓN RSVP -->
+      <div id="rsvp" class="subseccion">
+        <h3>RSVP</h3>
+        <p>Hace <span id="contador"></span> que más de 12.952 km nos separan.</p>
+        <p>Para nosotros esto no es simplemente un casamiento: es la posibilidad y la apuesta a un futuro juntos.</p>
         <p>No necesitamos regalos materiales; lo único que queremos es poder volver a vivir en el mismo lugar. La tarjeta es la forma que encontramos de hacer posible esta fiesta y de ayudarnos a transformar ese deseo en realidad.</p>
 
         <p><strong>Mayores (por persona):</strong> $65.000</p>
@@ -418,6 +367,7 @@
           <img src="Comp 1.gif" alt="Confirmación visual" />
         </div>
       </div>
+
     </div>
   </section>
 
@@ -492,12 +442,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
