--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
       color: #fff;
     }
 
+    #cuando .detalles-titulo {
+      color: #BE1823;
+    }
+    
     #donde {
       background-color: #fff; 
       color: #111;
@@ -248,10 +252,10 @@
 
     /* FOOTER */
     footer {
-      background-color: #111;
-      color: white;
+      background-color: #fff;
+      color: #BE1823;
       text-align: center;
-      padding: 4vh 3vw;
+      padding: 2vh 5vw;
     }
 
     footer h2 {
@@ -417,4 +421,5 @@
   </script>
 </body>
 </html>
+
 
