--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
     #cuando {
       background-color: #F5B1B8; 
-      color: #fff;
+      color: #BE1823;
     }
 
     #cuando .detalles-titulo {
@@ -172,47 +172,10 @@
       color: #fff;
     }
 
-    /* SECCIÓN SALÓN */
-    section#salon {
-      background-color: #fff;
-      color: #111;
-    }
-
-    section#salon h2 {
-      color: #BE1823;
-    }
-
-    .salon-contenido {
-      display: flex;
-      align-items: flex-start;
-      justify-content: space-between;
-      gap: 2rem;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-
-    .salon-texto {
-      flex: 0 0 40%;
-      text-align: justify;
-    }
-
-    .salon-mapa {
-      flex: 0 0 55%;
-    }
-
-    .salon-mapa iframe {
-      width: 100%;
-      height: 450px;
-      border-radius: 8px;
-    }
-
-    @media (max-width: 768px) {
-      .salon-contenido {
-        flex-direction: column;
-      }
-      .salon-texto {
-        text-align: center;
-      }
+    #cuando p,
+    #donde p,
+    #rsvp p {
+      font-size: 1.2rem; /* ajustá el valor a gusto */
     }
 
     /* SECCIÓN REGISTRO (se mantiene como formulario en RSVP) */
@@ -421,5 +384,6 @@
   </script>
 </body>
 </html>
+
 
 
