--- a/index.html
+++ b/index.html
@@ -203,7 +203,36 @@
       background-color: #BE1823; 
       color: #f6f4ef;
     }
+    
+    .rsvp-contenido {
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between;
+      gap: 2rem;
+      max-width: 1000px;
+      margin: 0 auto;
+      text-align: left;
+    }
 
+    .rsvp-form {
+      flex: 0 0 40%;
+    }
+
+    .rsvp-texto {
+      flex: 0 0 55%;
+    }
+
+    @media (max-width: 768px) {
+      .rsvp-contenido {
+        flex-direction: column;
+        text-align: center;
+      }
+
+      .rsvp-form, .rsvp-texto {
+        flex: 1 1 auto;
+      }
+    }
+    
     #dudas {
       background-color: #f3b0b8;
       color: #f6f4ef;
@@ -426,6 +455,7 @@
   </script>
 </body>
 </html>
+
 
 
 
