--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       gap: 2rem;
       max-width: 1000px;
       margin: 0 auto;
-      text-align: left;
+      text-align: justify;
     }
 
     .rsvp-form {
@@ -222,7 +222,7 @@
     }
 
     .rsvp-texto {
-      flex: 0 0 55%;
+      flex: 0 0 50%;
     }
 
     @media (max-width: 768px) {
@@ -411,10 +411,11 @@
           <p>Hace <span id="contador"></span> que más de 12.952 km nos separan.<br>
           Para nosotros esto no es simplemente un casamiento: es la posibilidad y la apuesta a un futuro juntos.<br>
           Debido a nuestra situación, no necesitamos regalos materiales, lo único que queremos es poder volver a vivir en el mismo lugar.</p>
-          <p>La tarjeta es la forma que encontramos de hacer posible esta fiesta y de ayudarnos a transformar ese deseo en realidad:<br>
-          <strong>Mayores:</strong> $65.000 | <strong>Niñxs 5 a 12:</strong> $35.000 | <strong>0 a 4:</strong> invitados ✨</p>
+          <p>La tarjeta es la forma que encontramos de hacer posible esta fiesta y de ayudarnos a transformar ese deseo en realidad.<br>
+          <strong>Mayores:</strong> $65.000 | <strong>Niñxs 5 a 12:</strong> $35.000 | <strong>0 a 4:</strong> invitados</p>
         <img src="qr.png" alt="Código QR" style="max-width:200px;">
         <p><strong>Alias:</strong> XXXXX.XXXX.XXX</p>
+        <p>Gracias por acompañarnos, por hacer este día posible y por acercarnos un poco más a nuestro sueño.</p>
       </div>
     </div>
   </div>
@@ -430,7 +431,7 @@
 
   <!-- FOOTER -->
   <footer>
-    <p>Con todo nuestro amor, <strong>Iara & Imanol</strong> ✨</p>
+    <p>Con todo nuestro amor, <strong>Iara & Imanol</strong></p>
   </footer>
 
   <!-- SCRIPTS -->
@@ -463,6 +464,7 @@
   </script>
 </body>
 </html>
+
 
 
 
